Fix second navbar z-index

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -103,6 +103,7 @@ body {
 .navbar-inverse {
   background-color: #0B2A40;
   border-color: #e7e7e7;
+  z-index: 3
 }
 .navbar-inverse .navbar-nav > li > a {
   color: #a3b7cc;
